--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">GPSFake</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="set_location">Set Location</string>
+    <string name="select_apps">Select Apps</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
 
 </resources>
